added docs support to flowlogix integration tests